--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amounts",
   "version": "0.3.0",
-  "description": "Measurements and unit conversions",
+  "description": "Measurements and unit conversions.  Supports angle, area, duration, energy, illuminance, length, mass, power, pressure, speed, temperature, volume and generic amounts.",
   "license": "MIT",
   "repository": "aholstenson/amounts",
   "scripts": {
