--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amounts",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Represent amounts of stuff with units and conversions",
   "license": "MIT",
   "repository": "aholstenson/amounts",
@@ -34,6 +34,5 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.4.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
